--- a/ATCRoutes/package.json
+++ b/ATCRoutes/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "pinia": "^2.2.6",
     "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vue3-colorpicker": "^2.3.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
