--- a/ATCRoutes/package.json
+++ b/ATCRoutes/package.json
@@ -14,7 +14,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@types/uuid": "^10.0.0",
     "pinia": "^2.2.6",
+    "uuid": "^11.0.3",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
     "vue3-colorpicker": "^2.3.0"
